# POO2

SEMANA 1/Figuras/: CMakeLists.txt  Circulo.cpp  Circulo.h  Figura.cpp  Figura.h  FiguraCompuesta.cpp  FiguraCompuesta.h  Rectangulo.cpp  Rectangulo.h  Triangulo.cpp  Triangulo.h  Variables_globales.h  Variables_globalesC.h  Variables_globalesFG.h  Variables_globalesT.h  main.cpp
