cmake_minimum_required(VERSION 3.12)
project(01_01)

set(CMAKE_CXX_STANDARD 17)

add_executable(01_01 main.cpp Figura.cpp Figura.h Rectangulo.cpp Rectangulo.h Triangulo.cpp Triangulo.h Circulo.cpp Circulo.h Variables_globales.h Variables_globalesT.h Variables_globalesC.h FiguraCompuesta.cpp FiguraCompuesta.h Variables_globalesFG.h)